--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "=4",
     "lottie-react": "^2.4.0",
     "react": "=17.0.2",
+    "react-dom": "^17.0.2",
     "react-chips": "=0.8.0",
     "react-lottie-player": "^2.0.0",
     "react-notification-badge": "=1.5.1",
